--- a/src/app/main/pages/replacements/dialogs/create-dialog-replacements/create-dialog-replacements.component.html
+++ b/src/app/main/pages/replacements/dialogs/create-dialog-replacements/create-dialog-replacements.component.html
@@ -12,23 +12,23 @@
                 <div *ngFor="let _ of parts.controls; let i=index" class="form-array">
                     <div [formGroupName]="i" class="container-form-array">
 
-                        <mat-form-field appearance="outline" style="width: 200px;" class="container-form-array__inputs">
-                            <mat-label>Nº de parte actual</mat-label>
-                            <input matInput type='text' placeholder="Parte" formControlName="currentPart">
-                            <mat-error *ngIf="parts.controls[i].get('currentPart').errors">
-                                Campo <strong>requerido.</strong>
-                            </mat-error>
-                        </mat-form-field>
-
-                        <mat-form-field appearance="outline" style="width: 200px;" class="container-form-array__inputs">
-                            <mat-label>Nº de parte reemplazo</mat-label>
-                            <input matInput type="text" placeholder="Nº de parte reemplazo"
-                                formControlName="replacedPart">
+                        <mat-form-field appearance="outline" style="width: 150px;" class="container-form-array__inputs">
+                            <mat-label>Anterior SAP</mat-label>
+                            <input matInput type='text' placeholder="Anterior SAP" formControlName="replacedPart">
                             <mat-error *ngIf="parts.controls[i].get('replacedPart').errors">
                                 Campo <strong>requerido.</strong>
                             </mat-error>
                         </mat-form-field>
-                        <mat-form-field appearance="outline" style="width: 200px;" class="container-form-array__inputs">
+
+                        <mat-form-field appearance="outline" style="width: 150px;" class="container-form-array__inputs">
+                            <mat-label>Nuevo SAP</mat-label>
+                            <input matInput type="text" placeholder="Nuevo SAP"
+                                formControlName="currentPart">
+                            <mat-error *ngIf="parts.controls[i].get('currentPart').errors">
+                                Campo <strong>requerido.</strong>
+                            </mat-error>
+                        </mat-form-field>
+                        <mat-form-field appearance="outline" style="flex: auto 1 1;" class="container-form-array__inputs">
                             <mat-label>Descripción</mat-label>
                             <input matInput type="text" placeholder="Descripción" formControlName="description">
                             <mat-error *ngIf="parts.controls[i].get('description').errors">
@@ -38,6 +38,10 @@
                         <div class="container-form-array__checked">
                             <span>Kit</span>
                             <mat-checkbox class="checked-margin" color="primary" formControlName="kit"></mat-checkbox>
+                        </div>
+                        <div class="container-form-array__checked">
+                            <span>Soporte</span>
+                            <mat-checkbox class="checked-margin" color="primary" formControlName="support"></mat-checkbox>
                         </div>
                         <button mat-icon-button type="button" style="margin-top: 8px;">
                             <mat-icon color="warn" (click)="deleteControl(i)">delete</mat-icon>
@@ -54,7 +58,7 @@
             <button type="button" mat-stroked-button color="warn" class="footer__btn-close"
                 mat-dialog-close>CERRAR</button>
             <button type="button" mat-raised-button color="primary" class="footer__btn-save"
-                (click)="save()">ENVIAR</button>
+                (click)="save()" [disabled]="!createReplacementForm.valid">ENVIAR</button>
         </mat-dialog-actions>
     </form>
 </div>
