--- a/src/app/main/pages/replacements/replacements.component.scss
+++ b/src/app/main/pages/replacements/replacements.component.scss
@@ -1,32 +1,36 @@
-
-.container{
+.container {
     margin: 40px 70px 40px 70px;
 }
-.header-container{
+.header-container {
     display: inline-flex;
 }
-.btn-add{
-  border: 1px #6200EE solid;
-  color: #6200EE;
-  margin-left:40px ;
-  padding: 5px 30px 5px 30px;
+.btn-add {
+    border: 1px #6200ee solid;
+    color: #6200ee;
+    margin-left: 40px;
+    padding: 5px 30px 5px 30px;
 }
-.icon-add{
-    color: #6200EE;
+.icon-add {
+    color: #6200ee;
 }
-.body-container{
+.body-container {
     margin-top: 40px;
 }
+
 table {
     width: 100%;
-  }
-
-.btn-state-validate{
-    background: #27AE60; 
-    color: white;   
+    .table__cell {
+        min-width: 80px;
+        padding: 0px 8px;
+    }
 }
 
-.btn-state-register{
-    background: #F2C94C;  
-    color: black;   
+.btn-state-validate {
+    background: #27ae60;
+    color: white;
+}
+
+.btn-state-register {
+    background: #f2c94c;
+    color: black;
 }
