:art: Request/Progress observations style

--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-observations-dialog/evaluations-observations-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-observations-dialog/evaluations-observations-dialog.component.html
@@ -1,35 +1,31 @@
-<h2 mat-dialog-title>
-    <div class="container-h2">
-        <button mat-icon-button class="container-h2__button">
-            <mat-icon class="container-h2__icon">remove_red_eye</mat-icon>
-            <span class="container-h2__title">
-                Observaciones
-            </span>
-        </button>
-        <button mat-icon-button mat-dialog-close>
-            <mat-icon class="container-h2__icon-close">close</mat-icon>
-        </button>
-    </div>
-    <mat-divider style="margin-top: 20px;"></mat-divider>
-    <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
-</h2>
+<div mat-dialog-title class="header">
+    <mat-icon class="header__icon">remove_red_eye</mat-icon>
+    <h3 class="header__title">
+        Observaciones
+    </h3>
+    <span class="ms-fill"></span>
+    <button mat-icon-button mat-dialog-close>
+        <mat-icon class="header__icon">close</mat-icon>
+    </button>
+</div>
+<mat-divider style="margin-top: 20px;"></mat-divider>
+<mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+
 <mat-dialog-content class="mat-typography">
-    <!-- <mat-list role="list"> -->
-    <mat-list-item role="listitem" class="listitem-content">OT MAIN:</mat-list-item>
-    <mat-list-item role="listitem" class="listitem-content">OT CHILD:</mat-list-item>
-    <mat-list-item role="listitem" class="listitem-content">Correlativo:</mat-list-item>
-    <mat-list-item role="listitem" class="listitem-content">Número de Parte:</mat-list-item>
-    <mat-list-item role="listitem" class="listitem-content">Descripción:</mat-list-item>
-    <mat-list-item role="listitem" class="listitem-content">Tipo de Atención:</mat-list-item>
-    <mat-list-item role="listitem" class="listitem-content">Usuario:</mat-list-item>
-    <mat-list-item role="listitem" class="listitem-content">WOF (Orden de fabricación)</mat-list-item>
-    <mat-list-item role="listitem" class="listitem-content">Trabajo:</mat-list-item>
-    <mat-list-item role="listitem" class="listitem-content">Taller:</mat-list-item>
-    <mat-list-item role="listitem" class="listitem-content">Observaciones:</mat-list-item>
-    <div style="margin-top: 30px;"></div>
-    <mat-list-item role="listitem" class="listitem-content__second">Resultado:</mat-list-item>
-    <mat-list-item role="listitem" class="listitem-content__second">Tipo de Ensayo:</mat-list-item>
-    <mat-list-item role="listitem" class="listitem-content__second">Inspector:</mat-list-item>
+    <p><span style="font-weight: bold;"> OT MAIN :</span> {{data.otMain ? data.otMain : ''}}</p>
+    <p><span style="font-weight: bold;"> OT CHILD :</span> {{data.otChild ? data.otChild : ''}}</p>
+    <p><span style="font-weight: bold;"> Correlativo :</span> {{data.position ? data.position : ''}}</p>
+    <p><span style="font-weight: bold;"> N° de parte :</span> {{data.partNumber ? data.partNumber : ''}}</p>
+    <p><span style="font-weight: bold;"> Descripcion :</span> {{data.description ? data.description : ''}}</p>
+    <p><span style="font-weight: bold;"> Tipo de Atencion :</span> {{data.status ? data.status : ''}}</p>
+    <p><span style="font-weight: bold;"> Usuario :</span> {{data.createdBy ? data.createdBy : ''}} </p>
+    <p><span style="font-weight: bold;"> WOF (Orden de Fabricacion) :</span> {{data.wof ? data.wof : ''}}</p>
+    <p><span style="font-weight: bold;"> Trabajo :</span> {{data.task ? data.task : ''}}</p>
+    <p><span style="font-weight: bold;"> Observaciones :</span> {{data.observations ? data.observations : ''}}</p>
+    <mat-divider style="margin: 16px 0px"></mat-divider>
+    <p><span style="font-weight: bold;"> Resultados :</span> {{data.result ? data.result : ''}}</p>
+    <p><span style="font-weight: bold;"> Tipo de ensayo :</span> {{data.kindOfTest ? data.kindOfTest : ''}}</p>
+    <p><span style="font-weight: bold;"> Inspector :</span> {{data.finalizedBy ? data.finalizedBy : ''}}</p>
     <div style="margin-top: 30px;"></div>
     <mat-accordion>
         <mat-expansion-panel class="container-panel">
@@ -87,7 +83,7 @@
     </mat-accordion>
     <div style="margin-top: 30px;"></div>
     <mat-accordion>
-        <mat-expansion-panel  class="container-panel">
+        <mat-expansion-panel class="container-panel">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                     <div class="container-panel__number--panel">
@@ -114,5 +110,4 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-    <button type="button" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial>ACEPTAR</button>
 </mat-dialog-actions>
