--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
@@ -41,7 +41,7 @@
               <mat-icon>timeline</mat-icon>
               Línea de tiempo
             </button>
-            <button mat-menu-item (click)="observationsDialog()">
+            <button mat-menu-item (click)="observationsDialog(item)">
               <mat-icon>remove_red_eye</mat-icon>
               Observaciones
             </button>
