--- a/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-observation-dialog/requests-observation-dialog.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-observation-dialog/requests-observation-dialog.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin: 8px 0px;
 
     &__title {
         font-family: Poppins !important;
@@ -34,7 +35,7 @@
         margin-top: 2px;
         border-radius: 50%;
     }
-    
+
     &__description {
         font-family: Roboto;
         font-style: normal;
