--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
@@ -6,54 +6,19 @@
         <mat-icon mat-list-icon>settings</mat-icon>
       </div>
       <span class="ms-fill"></span>
-      <!-- <div class="requests__title--search mat-elevation-z4">
-        <button mat-button class="requests__title--button">
-          <mat-icon>search</mat-icon>
-        </button>
-        <input matInput placeholder="Taller" name="search" class="requests__title--input" />
-      </div> -->
+      
+      <div class="requests__title--select" >
+        <mat-form-field style="border: transparent;" >
+          <mat-select [formControl]="workshopControl" >
+            <mat-option>Seleccione</mat-option>
+            <mat-option *ngFor="let item of tallerList$ | async" [value]="item">
+              {{item.workshop}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
 
-      <!-- <div *ngIf="taller$ |async as tallers" style="background: white;" >
-      <mat-form-field appearance="outline"  >
-        <mat-label>Selecione un Taller</mat-label>
-        <mat-select  >
-          <mat-option  *ngFor="let item of tallers" [value]="item.workshop">{{item.workshop}}</mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div> -->
-
-      <!-- <mat-form-field class="content w3-small" appearance="outline">
-      <mat-icon matPrefix></mat-icon>
-      <mat-label>Estado</mat-label>
-      <mat-select [formControl]="tallerForm">
-          <mat-option value="Todos">Todos</mat-option>
-          <mat-option *ngFor="let stat of status" [value]="stat">
-              {{stat}}
-          </mat-option>
-      </mat-select>
-    </mat-form-field> -->
-
-      <!--  <mat-form-field color="primary" *ngIf="tallerList$ | async as tallers" class="content w3-small toolbar_item"
-      appearance="outline" style="width: 150px;">
-      <mat-label>Categoria</mat-label>
-      <mat-icon matPrefix></mat-icon>
-      <mat-icon matSuffix>arrow_drop_down</mat-icon>
-      <input [formControl]="tallerForm" [matAutocomplete]="categoryAutocomplete" type="text" matInput>
-      <mat-autocomplete autoActiveFirstOption #categoryAutocomplete="matAutocomplete" [displayWith]="showTaller">
-        <mat-option [value]="''">
-          Todos
-        </mat-option>
-        <mat-option *ngFor="let taller of tallers" [value]="taller">
-          {{taller.workshop}}
-        </mat-option>
-      </mat-autocomplete>
-      <mat-error>
-        <span *ngIf="tallerForm.errors?.required">Por favor, complete el campo.</span>
-        <span *ngIf="tallerForm.errors?.invalid">Dato inválido. Complete con alguna opción válida.</span>
-      </mat-error>
-    </mat-form-field> -->
-
-      <div class="requests__title--search mat-elevation-z4">
+      <div class="requests__title--search mat-elevation-z4" >
         <button mat-button class="requests__title--button">
           <mat-icon>search</mat-icon>
         </button>
