--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-upload-file-dialog/history-upload-file-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-upload-file-dialog/history-upload-file-dialog.component.html
@@ -7,13 +7,13 @@
     CREAR LOTE
   </h2>
   <mat-divider></mat-divider>
-  <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+  <mat-progress-bar mode="buffer" *ngIf="loading$ | async" [value]="uploading" [bufferValue]="uploading"></mat-progress-bar>
 
   <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".xls,.xlsx"
     id="fileInput2">
-  <button aria-label="add" mat-button class="btn-add" accept=".xls,.xlsx" (click)="fileInput2.click()">
+  <button aria-label="add" mat-button class="btn-add" accept=".xls,.xlsx" (click)="fileInput2.click()" [disabled]="loading$ | async">
     <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
-    SELECIONE ARCHIVO
+    SELECCIONE ARCHIVO
   </button>
   <mat-dialog-content style="margin-top: 20px;">
     <ng-container *ngIf="settingDataSource.data.length; else default">
