--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
@@ -19,7 +19,7 @@
     </div>
   </div>
   <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
-  
+
   <div class="cards-container">
     <div class="box mat-elevation-z2" *ngFor="let item of evaluations;let i=index">
       <div class="header-box">
@@ -45,11 +45,11 @@
               <mat-icon>remove_red_eye</mat-icon>
               Observaciones
             </button>
-            <button mat-menu-item (click)="consultDialog()">
+            <button mat-menu-item (click)="consultDialog(item)">
               <mat-icon>help</mat-icon>
               Consultar
             </button>
-            <button mat-menu-item (click)="responseDialog()">
+            <button mat-menu-item (click)="responseDialog(item)">
               <mat-icon>question_answer</mat-icon>
               Responder
             </button>
