:bug::bug::bug:

--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
@@ -7,7 +7,7 @@
       </div>
       <span class="ms-fill"></span>
       
-      <div class="requests__title--select" >
+      <!-- <div class="requests__title--select" >
         <mat-form-field style="border: transparent;" >
           <mat-select [formControl]="workshopControl" >
             <mat-option>Seleccione</mat-option>
@@ -16,7 +16,7 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
-      </div>
+      </div> -->
 
       <div class="requests__title--search mat-elevation-z4" >
         <button mat-button class="requests__title--button">
