--- a/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-setting-dialog/requests-setting-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-setting-dialog/requests-setting-dialog.component.html
@@ -29,7 +29,7 @@
         </mat-dialog-content>
         <mat-dialog-actions align="end">
             <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-            <button type="button" mat-raised-button color="primary" class="footer__btn-save">GUARDAR</button>
+            <button type="button" mat-raised-button color="primary" class="footer__btn-save" (click)="save()">GUARDAR</button>
         </mat-dialog-actions>
 </div> 
 
