--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-consults-dialog/evaluations-consults-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-consults-dialog/evaluations-consults-dialog.component.html
@@ -14,53 +14,17 @@
     <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
 </h2>
 <mat-dialog-content class="mat-typography">
-    <table style="width:100%" class="listitem-content">
-        <tr>
-            <td>OT MAIN:</td>
-            <td>{{data.otMain}}</td>
-        </tr>
-        <tr>
-            <td>OT CHILD:</td>
-            <td>{{data.otChild}}</td>
-        </tr>
-        <tr>
-            <td>Correlativo:</td>
-            <td>{{data.position}}</td>
-        </tr>
-        <tr>
-            <td>Número de Parte:</td>
-            <td>{{data.partNumber}}</td>
-        </tr>
-        <tr>
-            <td>Descripción:</td>
-            <td>{{data.description}}</td>
-        </tr>
-        <tr>
-            <td>Tipo de Atención:</td>
-            <td>{{data.status}}</td>
-        </tr>
-        <tr>
-            <td>Usuario:</td>
-            <td>{{data.createdBy}}</td>
-        </tr>
-        <tr>
-            <td>WOF:</td>
-            <td>{{data.wof}}</td>
-        </tr>
-        <tr>
-            <td>Trabajo:</td>
-            <td>{{data.task}}</td>
-        </tr>
-        <tr>
-            <td>Taller:</td>
-            <td>{{data.workshop}}</td>
-        </tr>
-        <tr>
-            <td>Observaciones:</td>
-            <td>{{data.observations}}</td>
-        </tr>
-    </table>
-    <mat-divider style="margin-top: 20px;"></mat-divider>
+    <p><span style="font-weight: bold;"> OT MAIN :</span> {{data.otMain ? data.otMain : ''}}</p>
+    <p><span style="font-weight: bold;"> OT CHILD :</span> {{data.otChild ? data.otChild : ''}}</p>
+    <p><span style="font-weight: bold;"> Correlativo :</span> {{data.position ? data.position : ''}}</p>
+    <p><span style="font-weight: bold;"> N° de parte :</span> {{data.partNumber ? data.partNumber : ''}}</p>
+    <p><span style="font-weight: bold;"> Descripcion :</span> {{data.description ? data.description : ''}}</p>
+    <p><span style="font-weight: bold;"> Tipo de Atencion :</span> {{data.status ? data.status : ''}}</p>
+    <p><span style="font-weight: bold;"> Usuario :</span> {{data.createdBy.name ? data.createdBy.name : data.createdBy}} </p>
+    <p><span style="font-weight: bold;"> WOF (Orden de Fabricacion) :</span> {{data.wof ? data.wof : ''}}</p>
+    <p><span style="font-weight: bold;"> Trabajo :</span> {{data.task ? data.task : ''}}</p>
+    <p><span style="font-weight: bold;"> Observaciones :</span> {{data.observations ? data.observations : ''}}</p>
+    <mat-divider style="margin: 16px 0px"></mat-divider>
     <div class="item-consult" *ngIf="evaluationsById">
         <mat-card class="mat-elevation-z0" *ngFor="let item of evaluationsById; let i=index">
             <mat-card-content>
@@ -73,7 +37,8 @@
                 <p class="item-consult__question">
                     {{item.inquiry}}
                 </p>
-                <img [src]="item.inquiryImage" onError="this.src='../../../../../../../assets/img/error-image.png'" *ngIf="item.inquiryImage"/>
+                <img [src]="item.inquiryImage" onError="this.src='../../../../../../../assets/img/error-image.png'"
+                    *ngIf="item.inquiryImage" />
             </mat-card-content>
         </mat-card>
     </div>
@@ -97,7 +62,8 @@
         </div>
         <label for="inquiryImage">
             <mat-card class="mat-elevation-z0">
-                <img [src]="imagesUpload" onError="this.src='../../../../../../../assets/img/camara.png'" class="pointer" />
+                <img [src]="imagesUpload" onError="this.src='../../../../../../../assets/img/camara.png'"
+                    class="pointer" />
                 <mat-card-actions *ngIf="imagesUpload" align="end">
                     <button mat-icon-button (click)="deleteImage()">
                         <mat-icon color="warn">delete</mat-icon>
@@ -106,10 +72,12 @@
             </mat-card>
             <mat-divider></mat-divider>
         </label>
-        <input id="inquiryImage" type="file" style="display: none;" accept="image/x-png, image/jpg, image/jpeg" (change)="uploadFile($event)" />
+        <input id="inquiryImage" type="file" style="display: none;" accept="image/x-png, image/jpg, image/jpeg"
+            (change)="uploadFile($event)" />
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-    <button type="submit" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial (click)="onSubmit()">ENVIAR</button>
+    <button type="submit" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial
+        (click)="onSubmit()">ENVIAR</button>
 </mat-dialog-actions>
