--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-response-dialog/evaluations-response-dialog.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-response-dialog/evaluations-response-dialog.component.scss
@@ -26,6 +26,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        
+        image {
+            width: 100%
+        }
     }
 }
 
@@ -76,13 +80,13 @@
 }
 
 .item-question {
-    width: 338.05px;
+    width:100%;
     height: 51px;
-    margin-top: 20px;
+    margin: 20px 0px;
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
-    font-size: 17.6591px;
+    font-size: 1.2rem;
     line-height: 25px;
     letter-spacing: 0.315341px;
     color: rgba(0, 0, 0, 0.6);
