--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
@@ -7,16 +7,16 @@
       </div>
       <span class="ms-fill"></span>
       
-      <!-- <div class="requests__title--select" >
+      <div class="requests__title--select" >
         <mat-form-field style="border: transparent;" >
           <mat-select [formControl]="workshopControl" >
             <mat-option>Seleccione</mat-option>
-            <mat-option *ngFor="let item of tallerList$ | async" [value]="item">
-              {{item.workshop}}
+            <mat-option *ngFor="let item of workshops" [value]="item">
+              {{item.code}}
             </mat-option>
           </mat-select>
         </mat-form-field>
-      </div> -->
+      </div>
 
       <div class="requests__title--search mat-elevation-z4" >
         <button mat-button class="requests__title--button">
