:rocket: :art: last fixes

--- a/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
@@ -161,7 +161,7 @@
                 <mat-icon>delete</mat-icon>
                 Borrar
               </button>
-              <button class="w3-small" mat-menu-item (click)="openDialog('oservation', element, i)">
+              <button class="w3-small" mat-menu-item (click)="openDialog('observation', element, i)">
                 <mat-icon>remove_red_eye</mat-icon>
                 Observaciones
               </button>
