--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-observation-dialog/history-observation-dialog.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-observation-dialog/history-observation-dialog.component.scss
@@ -1,21 +1,40 @@
-.container-h2 {
+.header {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    &__button {
-        width: 80px;
-        height: 80px;
+    align-items: center;
+
+    &__title {
+        font-family: Poppins !important;
+        font-style: normal !important;
+        font-weight: bold !important;
+        font-size: 18px !important;
+        line-height: 27px !important;
+        color: rgba(43, 43, 43, 0.87) !important;
+        margin: 0px 0px;
     }
-    &__icon {
-        color: #464646;
-        font-size: 40px;
-        margin-right: 23px;
+
+    &__icon-close {
+        color: gray;
     }
-    &__iconp {
-        color: #6200EE;
-        font-size: 26px;
+}
+
+.container-panel {
+    &__number--panel {
+        width: 26px;
+        height: 26px;
+        background-color: #6200ee;
+        font-family: Poppins;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 27px;
+        color: #ffffff;
+        text-align: center;
         margin-left: 10px;
+        margin-top: 2px;
+        border-radius: 50%;
     }
+
     &__description {
         font-family: Roboto;
         font-style: normal;
@@ -28,16 +47,37 @@
         text-transform: capitalize;
         color: #000000;
     }
-    &__title {
-        font-family: Poppins !important;
-        font-style: normal !important;
-        font-weight: bold !important;
-        font-size: 18px !important;
-        line-height: 27px !important;
-        color: rgba(43, 43, 43, 0.87) !important;
+
+    &__image {
+        margin-top: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
-    &__icon-close {
-        color: gray;
+
+    &__question-image {
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-bottom: 10px;
+        display: flex;
+        flex-direction: row;
+
+        &--img {
+            width: 123px;
+            height: 82px;
+        }
+
+        &--question {
+            margin-left: 10px;
+            font-family: Roboto;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 12px;
+            line-height: 25px;
+            display: flex;
+            letter-spacing: 0.315341px;
+            color: rgba(0, 0, 0, 0.6);
+        }
     }
 }
 
@@ -93,4 +133,26 @@
     box-sizing: border-box;
     box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
+}
+
+.item-consult {
+    margin-top: 20px;
+    margin-left: 10px;
+}
+
+.item-question {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17.6591px;
+    line-height: 25px;
+    /* or 143% */
+
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.315341px;
+
+    /* 00. On Surface / Medium Emphasis */
+
+    color: rgba(0, 0, 0, 0.6);
 }
