--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
@@ -1,110 +1,82 @@
-<h2 mat-dialog-title>
-    <div class="container-h2">
-        <button mat-icon-button class="container-h2__button">
-            <mat-icon class="container-h2__icon">stop</mat-icon>
-            <span class="container-h2__title">
-                Finalizar
-            </span>
-        </button>
-        <button mat-icon-button mat-dialog-close>
-            <mat-icon class="container-h2__icon-close">close</mat-icon>
-        </button>
-    </div>
-    <mat-divider style="margin-top: 20px;"></mat-divider>
-    <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
-</h2>
-<mat-dialog-content class="mat-typography">
-    <table style="width:100%" class="listitem-content">
-        <tr>
-            <td>OT MAIN:</td>
-            <td>{{data.otMain}}</td>
-        </tr>
-        <tr>
-            <td>OT CHILD:</td>
-            <td>{{data.otChild}}</td>
-        </tr>
-        <tr>
-            <td>Correlativo:</td>
-            <td>{{data.position}}</td>
-        </tr>
-        <tr>
-            <td>Número de Parte:</td>
-            <td>{{data.partNumber}}</td>
-        </tr>
-        <tr>
-            <td>Descripción:</td>
-            <td>{{data.description}}</td>
-        </tr>
-        <tr>
-            <td>Tipo de Atención:</td>
-            <td>{{data.status}}</td>
-        </tr>
-        <tr>
-            <td>Usuario:</td>
-            <td>{{data.createdBy}}</td>
-        </tr>
-        <tr>
-            <td>WOF:</td>
-            <td>{{data.wof}}</td>
-        </tr>
-        <tr>
-            <td>Trabajo:</td>
-            <td>{{data.task}}</td>
-        </tr>
-        <tr>
-            <td>Taller:</td>
-            <td>{{data.workshop}}</td>
-        </tr>
-        <tr>
-            <td>Observaciones:</td>
-            <td>{{data.observations}}</td>
-        </tr>
-    </table>
-    <mat-divider style="margin-top: 20px;"></mat-divider>
-    <form [formGroup]="finalizeForm" autocomplete="off" class="form-container">
-        <div class="form-container__form-inputs">
-            <mat-form-field appearance="outline" id="result">
-                <mat-label>Resultado</mat-label>
-                <input matInput placeholder="Resultado" formControlName="result">
-                <mat-error *ngIf="finalizeForm.controls['result'].errors">
-                    Campo <strong>requerido.</strong>
-                </mat-error>
-            </mat-form-field>
-            <mat-form-field appearance="outline" id="kindOfTest">
-                <mat-label>Tipo de ensayo</mat-label>
-                <input matInput placeholder="Tipo de ensayo" formControlName="kindOfTest">
-                <mat-error *ngIf="finalizeForm.controls['kindOfTest'].errors">
-                    Campo <strong>requerido.</strong>
-                </mat-error>
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Comentarios (Opcional)</mat-label>
-                <input matInput placeholder="Comentarios" formControlName="comments">
-            </mat-form-field>
-        </div>
+<div style="max-width: 500px">
 
-        <div *ngFor="let img of images;let i=index;">
-            <img [src]="img" alt="" onError="this.src='../../../../../../../assets/img/error-image.png'">
+    <h2 mat-dialog-title>
+        <div class="container-h2">
+            <button mat-icon-button class="container-h2__button">
+                <mat-icon class="container-h2__icon">stop</mat-icon>
+                <span class="container-h2__title">
+                    Finalizar
+                </span>
+            </button>
+            <button mat-icon-button mat-dialog-close>
+                <mat-icon class="container-h2__icon-close">close</mat-icon>
+            </button>
         </div>
+        <mat-divider style="margin-top: 20px;"></mat-divider>
+        <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+    </h2>
+    <mat-dialog-content class="mat-typography">
+        <p><span style="font-weight: bold;"> OT MAIN :</span> {{data.otMain ? data.otMain : ''}}</p>
+        <p><span style="font-weight: bold;"> OT CHILD :</span> {{data.otChild ? data.otChild : ''}}</p>
+        <p><span style="font-weight: bold;"> Correlativo :</span> {{data.position ? data.position : ''}}</p>
+        <p><span style="font-weight: bold;"> N° de parte :</span> {{data.partNumber ? data.partNumber : ''}}</p>
+        <p><span style="font-weight: bold;"> Descripcion :</span> {{data.description ? data.description : ''}}</p>
+        <p><span style="font-weight: bold;"> Tipo de Atencion :</span> {{data.status ? data.status : ''}}</p>
+        <p><span style="font-weight: bold;"> Usuario :</span> {{data.createdBy.name ? data.createdBy.name :
+            data.createdBy}}
+        </p>
+        <p><span style="font-weight: bold;"> WOF (Orden de Fabricacion) :</span> {{data.wof ? data.wof : ''}}</p>
+        <p><span style="font-weight: bold;"> Trabajo :</span> {{data.task ? data.task : ''}}</p>
+        <p><span style="font-weight: bold;"> Observaciones :</span> {{data.observations ? data.observations : ''}}</p>
+        <mat-divider style="margin: 16px 0px"></mat-divider>
+        <form [formGroup]="finalizeForm" autocomplete="off" class="form-container">
+            <div class="form-container__form-inputs">
+                <mat-form-field appearance="outline" id="result">
+                    <mat-label>Resultado</mat-label>
+                    <input matInput placeholder="Resultado" formControlName="result">
+                    <mat-error *ngIf="finalizeForm.controls['result'].errors">
+                        Campo <strong>requerido.</strong>
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field appearance="outline" id="kindOfTest">
+                    <mat-label>Tipo de ensayo</mat-label>
+                    <input matInput placeholder="Tipo de ensayo" formControlName="kindOfTest">
+                    <mat-error *ngIf="finalizeForm.controls['kindOfTest'].errors">
+                        Campo <strong>requerido.</strong>
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <mat-label>Comentarios (Opcional)</mat-label>
+                    <input matInput placeholder="Comentarios" formControlName="comments">
+                </mat-form-field>
+            </div>
+
+            <div *ngFor="let img of images;let i=index;">
+                <img [src]="img" alt="" onError="this.src='../../../../../../../assets/img/error-image.png'">
+            </div>
 
 
-        <div *ngFor="let imgUpload of imagesUpload;let i=index">
-            <label [for]="i">
-                <mat-card class="mat-elevation-z0">
-                    <img [src]="imgUpload" onError="this.src='../../../../../../../assets/img/camara.png'" class="pointer" />
-                    <mat-card-actions *ngIf="imgUpload" align="end">
-                        <button mat-icon-button (click)="deleteImage(imgForDelete, i)">
-                            <mat-icon color="warn">delete</mat-icon>
-                        </button>
-                    </mat-card-actions>
-                </mat-card>
-                <mat-divider></mat-divider>
-            </label>
-            <input [id]="i" type="file" style="display: none;" (change)="uploadFile($event,i)" accept="image/x-png, image/jpg, image/jpeg" />
-        </div>
-    </form>
-</mat-dialog-content>
-<mat-dialog-actions align="end">
-    <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-    <button type="submit" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial (click)="onSubmit()">GUARDAR</button>
-</mat-dialog-actions>
+            <div *ngFor="let imgUpload of imagesUpload;let i=index">
+                <label [for]="i">
+                    <mat-card class="mat-elevation-z0">
+                        <img [src]="imgUpload" onError="this.src='../../../../../../../assets/img/camara.png'"
+                            class="pointer" />
+                        <mat-card-actions *ngIf="imgUpload" align="end">
+                            <button mat-icon-button (click)="deleteImage(imgForDelete, i)">
+                                <mat-icon color="warn">delete</mat-icon>
+                            </button>
+                        </mat-card-actions>
+                    </mat-card>
+                    <mat-divider></mat-divider>
+                </label>
+                <input [id]="i" type="file" style="display: none;" (change)="uploadFile($event,i)"
+                    accept="image/x-png, image/jpg, image/jpeg" />
+            </div>
+        </form>
+    </mat-dialog-content>
+    <mat-dialog-actions align="end">
+        <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
+        <button type="submit" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial
+            (click)="onSubmit()">GUARDAR</button>
+    </mat-dialog-actions>
+</div>
