:art: Add expansions panels no styles

--- a/src/app/main/pages/evaluations/evaluations-settings/evaluations-settings.component.html
+++ b/src/app/main/pages/evaluations/evaluations-settings/evaluations-settings.component.html
@@ -1,1 +1,21 @@
-<p>evaluations-settings works!</p>
+<div class="container-settings">
+    <mat-accordion>
+        <mat-expansion-panel>
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                    Envío de Notificaciones
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+        </mat-expansion-panel>
+    </mat-accordion>
+    <div style="margin-top: 30px;"></div>
+    <mat-accordion>
+        <mat-expansion-panel>
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                    Lista desplegables
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+        </mat-expansion-panel>
+    </mat-accordion>
+</div>
